--- a/website/templates/first_heading.html
+++ b/website/templates/first_heading.html
@@ -1,2 +1,22 @@
-<!-- your html code here -->
-<p>Hello, I'm the first_heading.html</p>
+<body>
+    <div class="bg-white text-dark">
+    <div class="container px-1">
+      <hr>
+        <div class="row gx-5 align-items-left">
+            <div class="col-lg-4 order-lg-5">
+                <div class="p-5"><img class="img-fluid rounded-circle" src="assets/img/1.jpg" alt="..."></div>
+            </div>
+            <div class="col-lg-8 order-lg-1">
+                <div class="p-3">
+                    <h3 style="text-align:center;float:left;" class="fw-bold">The First Heading</h3><h3 style="float:center;" class="text-muted">‎ Will Catch your Eye</h3>
+                    <p class="blockquote">Donec ullamcorper nulla non metus auctor fringilla.
+                        Vestibulum id ligula porta felis euismod semper. 
+                        Praesent commodo cursus magna, vel scelerisque nisl cosectetur. 
+                        Fusce dapibus, tellus ac cursus commodo.</p>
+                </div>
+            </div>
+        </div>
+    </hr>
+    </div>
+    </div>
+    </body>
