--- a/website/templates/services.html
+++ b/website/templates/services.html
@@ -1,4 +1,12 @@
 <!-- your html code here -->
-<p>Hello, I'm the services.html</p>
-<p>Hello, I'm the services section and I was loaded using ajax from templates/services.html</p>
-<img alt="Walter White drawing">
+<div class="container">
+    <div class="row">
+        <div class="col-md-3">
+            <img src="Assets/img/2.jpg" class="services-image" alt="Female hands on a Keyboard">
+        </div>
+        <div class="col-md-9 pt-4">
+            <h2><b>The Second Heading</b><span id="is-pretty-cool-too">Is Pretty Cool Too</span></h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et quos autem culpa dolor beatae. Rerum similique perferendis iste optio obcaecati? Consectetur quas doloremque repudiandae totam nihil harum velit quo rem sit illo.</p>        
+        </div>
+    </div>
+</div>
