--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -1,2 +1,64 @@
 <!-- your html code here -->
-<p>Hello, I'm contact.html</p>
+<div class="body bg-white">
+    <div class="container">
+      <div class="row">
+        <div class="col mt-5">
+          <h1>Contact</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime
+            rerum veniam vel architecto natus ratione molestiae? Officia
+            molestias tempore consequuntur, fugit velit eveniet sapiente
+            rerum, incidunt, sunt mollitia animi dolor?
+          </p>
+          <div class="row d-flex justify-content-center mb-5">
+            <div class="col-8">
+              <div class="form-control bg-secondary bg-opacity-10">
+                <div class="container mt-3">  
+                  <div class="mb-3 row d-flex justify-content-end">
+                    <label
+                      for="staticEmail"
+                      class="d-flex justify-content-end col-3 mx-2 col-form-label"
+                      ><strong>Your E-mail </strong></label
+                    >
+                    <div class="col-sm-7 p-0">
+                      <textarea
+                        class="form-control text-secondary"
+                        id="exampleFormControlTextarea1 "
+                        rows="1"
+                      >
+Your email</textarea
+                      >
+                    </div>
+                  </div>
+                  <div class="mb-3 row d-flex justify-content-end">
+                    <label
+                      for="inputPassword"
+                      class="d-flex justify-content-end col-3 mx-2 col-form-label"
+                      ><strong>Your message</strong></label
+                    >
+
+                    <div class="col-sm-7 p-0">
+                      <textarea
+                        class="form-control text-secondary"
+                        id="exampleFormControlTextarea1 "
+                        rows="5"
+                      >
+Please enter your message here...</textarea
+                      >
+                      <div class="button d-flex justify-content-end mt-3">
+                        <input
+                          class="btn btn-primary"
+                          type="submit"
+                          value="Submit"
+                        />
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
