--- a/website/templates/tagline.html
+++ b/website/templates/tagline.html
@@ -1,3 +1,19 @@
 <!-- your html code here -->
 <!-- Also called a hero image or a jumbotron before bootstrap 5. This might be helpful: https://getbootstrap.com/docs/5.1/examples/jumbotron/ -->
-<p>Hello, I'm the tagline and I was loaded using ajax from templates/tagline.html</p>
+<div class="body bg-white">
+    <div class="container-fluid d-flexbox">
+        <div class="row justify-content-center">
+            <div class="col-12 d-flex align-items-center justify-content-center text-center text-capitalize">
+                <img src="./assets/img/bg.jpg" class="w-100" alt="..."> 
+                <div class="row position-absolute mx-1 my-5">
+                    <div class="col-12 bg-white mt-3">
+                        <h1 class="display-1 fw-bolder">one page wonder</h1>
+                    </div>
+                    <div class="col-12 bg-white my-4">
+                        <h4 class="display-4 fw-bolder">knock your socks off</h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div> 
